--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
 		<img class="github" src="images/Discord.png">
 		Discrod</a>
 	</div>
+	<div class="div1sub1">
+		<a class="a1" target="_blank" href="https://web.telegram.org/k/">
+		<img class="github" src="images/tel.png">
+		Telegram</a>
+	</div>
 </div>
 
 </div>
